--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ form {
 
 input {
   margin-top: 10px;
-  width: 200px;
+  width: 400px;
   padding-top: 20px;
   text-align: center;
 }
@@ -83,7 +83,7 @@ input:invalid {
 
 textarea {
   margin-top: 10px;
-  width: 200px;
+  width: 400px;
   padding-top: 20px;
   text-align: center;
 }
@@ -93,7 +93,12 @@ textarea {
   margin: auto;
 }
 
-
+.reach div {
+  margin-top: 10px;
+}
+label {
+  font-size: 18px;
+}
 .menu ul {
   margin-left: 10px;
   padding:2px;
@@ -105,7 +110,7 @@ button {
   margin-top: 10px;
   background: green;
   color: white;
-  width: 200px;
+  width: 400px;
   padding: 20px;
   text-transform: uppercase;
   letter-spacing: 2px;
