--- a/style.css
+++ b/style.css
@@ -1,129 +1,234 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  
-}
+/*Hero section starts*/
 
-
-img {
-  width:1000px;
-  height:800px;
-}
-
-
-.navs {
+header{
+  z-index: 1;
+  position: sticky;
+  top: 0;
+  background-color: rgba(24, 25, 24, 0.634);
+  padding: 1rem;  
   display: flex;
-  margin-left:260px;
-  list-style: none;
+  justify-content: space-between;
+  align-items: center;
+}
+header .logo{
+  font-size: 2rem;
+  font-weight: bold;
+  color: #ffffffa0;
+}
+header nav .navbar
+, header .navbar li a {
+  display: flex;
+  color: #ffffffdb;
+  margin: 1rem;
+}
+
+header nav .navbar a:hover {
+  color: rgb(176, 175, 175);
+  transition: .3s linear;
   
 }
+/*Header section ends*/
 
-.navs a:hover {
-  color: black;
-  text-decoration: underline;
-}
+/*Hero section starts*/
 
-a {
-  text-decoration: none;
-  margin: 30px;
-}
-
-a:visited {
-  color: #b19cd9;
-}
-
-a:focus, 
-a:active {
-  color: #416931;
-}
 .hero {
-  text-align: center;
+    text-align: center;
+    background-image: -webkit-linear-gradient(to right, rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.507)), url('img/hero-bg.jpg');
+    background-image: -moz-linear-gradient(to right, rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.507)), url('img/hero-bg.jpg');
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.49), rgba(0, 0, 0, 0.507)), url('img/hero-bg.jpg');
+    width: 100%;
+    height: 80vh;
+    background-attachment: scroll;
+    background-position: center;
+    position: relative;
 }
-
+.hero .hero-text{
+  display: block;
+  position: absolute;
+  top: 35%; left: 0; right: 0;
+  align-items: center;
+  justify-content: center;
+}
 .hero h1 {
+  color: azure;
   text-transform: uppercase;
+  font-weight: bold;
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
 }
+/*Hero section ends*/
 
 
-.contact {
-  margin: 40px;
-  width: 200px;
-  
-}
-form {
-  display: inline-block;
-  
-}
+/*About section starts*/
 .about {
-  text-align: center;
+  padding: 1rem;
+  margin: 2.8rem;
+  overflow: hidden;
 }
-
-.about h2 {
-  text-transform: uppercase;
+.about-container{
+  position: relative;
+  display: flex;
+  gap: 4rem;
+  margin: 0 auto;
+  justify-content: center;
+  width: 100%;
 }
-
-.about p {
-  text-align: justify;
+.about-brief-image{
+  width: 400px;
+}
+.about-brief-image img{
+  width: 450px;
+  border: none;
+}
+.about-brief{
+  width: 50%;
+}
+.about-brief p {
+  text-align: left;
   line-height: 1.5;
-  }
-
-input {
-  margin-top: 10px;
-  width: 400px;
-  padding-top: 20px;
-  text-align: center;
+  font-size: 1.2rem;
+  color: #555;
+}
+.about-brief a {
+  position: absolute;
+  right: 8%;
 }
 
-input:valid {
-  border: 2px solid green;
+.about-info{
+  color: #555;
+  line-height: 1.5;
+  font-size: 1.2rem;
 }
-
-input:invalid {
-  border: 2px solid red;
+.back-btn{
+  margin-top: 2.7rem;
+  position: relative;
+  left: 8%;
 }
-
-textarea {
-  margin-top: 10px;
-  width: 400px;
-  padding-top: 20px;
-  text-align: center;
-}
+/*About section ends*/
 
 
-.reach {
-  margin: auto;
+/*Menu section Starts*/
+.menu{
+  position: relative;
+  display: block;
 }
+.menu-btn a{
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  right: 5%;
+}
+.menu-btn i{
+  margin-left: .5rem;
+}
+.menu-grid{
+  position: relative;
+  margin: 2rem;
+  display: block;
+}
+.menu-grid .menu-box{
+  margin: 0 auto;
+  gap: 2rem;
+  margin: 3rem;
+}
+.menu-grid .menu-box .menu-box-info .box-number{
+  font-size: 6rem;
+  font-weight: bold;
+  color: #aba7a764;
+}
+.menu-grid .menu-box .menu-box-info .box-title{
+  font-size: 2rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 1rem;
+}
+.menu-grid .menu-box .menu-box-info .box-description{
+  font-size: 1rem;
+  color: #555;
+  line-height: 1.5;
+}
+.menu-grid .menu-box .menu-box-image img{
+  height: 300px;
+  width: 70%;
+  position: relative;
+  left: 10%;
+  border-radius: 10px;
+}
+/*gallery*/
+.menu-gallery{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 4rem auto;
+  gap: 2rem;
+}
+.menu-gallery .gallery-box img{
+  width: 20rem;
+  height: 20rem;
+  border-radius: 1rem;
+  cursor: pointer;
+}
+.menu-gallery .gallery-box img:hover{
+  transform: scale(1.01);
+  transition: .2s linear;
+  box-shadow: .1rem .1rem 1rem .1rem rgba(0, 0, 0, 0.084);
+}
+/*Menu section ends*/
 
-.reach div {
-  margin-top: 10px;
-}
-label {
-  font-size: 18px;
-}
-.menu ul {
-  margin-left: 10px;
-  padding:2px;
-}
 
-button {
-  background: transparent;
-  border: 0;
-  margin-top: 10px;
-  background: green;
-  color: white;
-  width: 400px;
-  padding: 20px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+/*Contact section starts*/
+.contact{
+  margin: 4rem 0;
 }
-
-button:hover {
-  color: greenyellow;
+.contact-form form{
+  box-shadow: .1rem .1rem 1rem .1rem rgba(0, 0, 0, 0.084);
+  width: 450px;
+  margin: 0 auto;
 }
+.contact-form form input
+, textarea{
+  width: 100%;
+  overflow: hidden;
+}
+.contact-form form input,
+textarea{
+  padding: 1rem .4rem 1rem 2.5rem;
+  margin: .4rem 0;
+  resize: none;
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.159);
+}
+.contact-form form .form-input{
+  padding: 1rem;
+  margin: .4rem 0;
+}
+.form-input .form-item{
+  position: relative;
+}
+.form-input .form-item i{
+  position: absolute;
+  left: 2%; top: 30%;
+  font-size: 1.5rem;
+  color: #555;
+}
+.contact-form form button{
+  padding: 1rem;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 0;
+}
+.contact-form form button:hover{
+  background-color: #055323;
+  color: aliceblue;
+  transition: .3s ease;
+}
+/*Contact section ends*/
 
 footer{
-  position: fixed;
-  left: 0;
-  bottom: 0;
   width: 100%;
   text-align: center;
   text-transform: uppercase;
